package main.java.source;

public interface Observateur {

    public void actualiser();

}
