@startuml
class source.VueTexte {
+ void actualiser()
}

class source.PopupCreationTache {
+ {static} void afficherPopup()
}

interface source.Observateur {
+ void actualiser()
}

interface source.Sujet {
+ void ajouterObservateur(Observateur)
+ void supprimerObservateur(Observateur)
+ void notifierObservateur()
}

class source.TacheManager {
- {static} TacheManager instance
- ArrayList<Observateur> observateurs
- ArrayList<Tache> listeTaches
+ {static} TacheManager getInstance()
+ void ajouterObservateur(Observateur)
+ void supprimerObservateur(Observateur)
+ void notifierObservateur()
+ void ajouterTache(Tache)
+ ArrayList<Tache> getTaches()
}


class source.Controller {
- TacheManager manager
+ void creerTache(String,String)
+ void supprimerTache(Tache)
}


class source.Main {
+ void start(Stage)
+ {static} void main(String[])
}

class source.TacheFactory {
+ {static} Tache creerTache(String,String)
}

class source.Tache {
- String titre
- String description
+ String getTitre()
+ String getDescription()
+ String toString()
}




source.Observateur <|.. source.VueTexte
source.Sujet <|.. source.TacheManager
javafx.application.Application <|-- source.Main
@enduml